tests/errors/default_virtual.vt
class B { virtual fn m(a: int = 0) {} } fn main(){}
